# ml

./: .gitignore  Cargo.toml
data/perceptron/: dump.txt
src/bayes/: main.py
src/common/: Cargo.toml  lib.rs
src/knn/: main.rs
src/linear/: main.rs
src/logistic/: main.rs
src/perceptron/: main.py
src/random_forest/: main.py
